testsuite/tests/typing-recovery/apply_wrong_label.compilers.reference
File "apply_wrong_label.ml", line 1:
Error: Multiple errors were encountered
File "apply_wrong_label.ml", line 12, characters 13-15:
12 | let _ = g ~y:10
                  ^^
  The function applied to this argument has type x:int -> int
This argument cannot be applied with label ~y
File "apply_wrong_label.ml", line 16, characters 13-14:
16 | let _ = h ~y:5 10
                  ^
  The function applied to this argument has type ?x:int -> int
This argument cannot be applied with label ~y
File "apply_wrong_label.ml", line 18, characters 17-19:
18 | let t : string = 10
                      ^^
  This expression has type int but an expression was expected of type string
